--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <link rel="stylesheet" src="./css/styles.css">
 
-    <title>Hello, world!</title>
+    <title>look i just edited your page on github!! we win the prize</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>put the money in the bag jk!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
